--- a/package.json
+++ b/package.json
@@ -1,18 +1,27 @@
 {
-    "name": "discord-moderation-bot",
-    "version": "1.0.0",
-    "description": "A Discord moderation bot with persistent logging and a web management interface featuring custom styling.",
-    "main": "bot.mjs",
-    "type": "module",
-    "scripts": {
-      "start": "node bot.mjs"
-    },
-    "author": "Your Name",
-    "license": "ISC",
-    "dependencies": {
-      "discord.js": "^14.11.0",
-      "@discordjs/rest": "^1.6.0",
-      "express": "^4.18.2"
-    }
-  }
-  
+  "name": "monkeybytes-discord-bot",
+  "version": "1.0.0",
+  "description": "Discord bot for monitoring and managing MonkeyBytes Discord server",
+  "main": "bot.mjs",
+  "type": "module",
+  "scripts": {
+    "start": "node bot.mjs"
+  },
+  "keywords": [
+    "discord",
+    "bot",
+    "monitoring",
+    "monkeybytes"
+  ],
+  "author": "XpalidinX",
+  "company": "MonkeyBytes",
+  "license": "MIT",
+  "dependencies": {
+    "discord.js": "^14.14.1",
+    "express": "^4.18.2"
+  },
+  "engines": {
+    "node": ">=16.9.0"
+  },
+  "private": true
+}
