--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
   "name": "monkeybytes-discord-bot",
   "version": "1.0.0",
-  "description": "Discord bot monitoring system for MonkeyBytes server",
+  "description": "Discord monitoring bot for MonkeyBytes server",
+  "main": "index.js",
   "type": "module",
-  "main": "index.mjs",
   "scripts": {
-    "start": "node index.mjs",
-    "dev": "nodemon index.mjs"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "dependencies": {
-    "discord.js": "^14.13.0",
-    "@discordjs/rest": "^2.0.1",
-    "discord-api-types": "^0.37.50",
-    "express": "^4.18.2"
+    "@discordjs/rest": "^1.7.1",
+    "discord-api-types": "^0.37.51",
+    "discord.js": "^14.11.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-basic-auth": "^1.2.1",
+    "systeminformation": "^5.18.15"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
@@ -20,7 +23,12 @@
   "engines": {
     "node": ">=16.9.0"
   },
-  "author": "MonkeyBytes",
-  "license": "MIT",
-  "private": true
+  "keywords": [
+    "discord",
+    "bot",
+    "monitoring",
+    "moderation"
+  ],
+  "author": "",
+  "license": "ISC"
 }
