chore: update Discord bot token in .env and enhance README for clarity and features

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 # Discord Bot Configuration
-DISCORD_BOT_TOKEN=here
+DISCORD_BOT_TOKEN=MTM0NjE5Nzk2MDUxMzQyNTQ4OQ.G-Y8sr.sEeb07CwXK2Ru8NaabuEA7TAra6VBpYZN2F3FM
