--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
-    "name": "monkeybytes-auth-bot",
-    "version": "1.0.0",
-    "description": "Discord Authentication Bot for MonkeyBytes",
-    "main": "monkeybytes-auth-bot.mjs",
-    "type": "module",
-    "scripts": {
-      "start": "node monkeybytes-auth-bot.mjs"
-    },
-    "dependencies": {
-      "discord.js": "^14.11.0",
-      "express": "^4.18.2",
-      "express-session": "^1.17.3",
-      "passport": "^0.6.0",
-      "passport-discord": "^0.1.4"
-    },
-    "author": "MonkeyBytes Tech",
-    "license": "UNLICENSED",
-    "private": true
+  "name": "monkeybytes-auth-bot",
+  "version": "1.0.0",
+  "description": "Discord Authentication Bot for MonkeyBytes",
+  "main": "monkeybytes-auth-bot.mjs",
+  "type": "module",
+  "scripts": {
+    "start": "node monkeybytes-auth-bot.mjs"
+  },
+  "author": "MonkeyBytes Tech",
+  "license": "MIT",
+  "dependencies": {
+    "axios": "^1.6.2",
+    "discord.js": "^14.14.1",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "os": "^0.1.2",
+    "passport": "^0.7.0",
+    "passport-discord": "^0.1.4"
   }
+}
