--- a/package.json
+++ b/package.json
@@ -1,20 +1,17 @@
 {
   "name": "monkeybytes-auth-bot",
   "version": "1.0.0",
-  "description": "Discord Authentication Bot for MonkeyBytes",
+  "description": "Discord authentication bot",
   "main": "monkeybytes-auth-bot.mjs",
   "type": "module",
   "scripts": {
     "start": "node monkeybytes-auth-bot.mjs"
   },
-  "author": "MonkeyBytes Tech",
-  "license": "MIT",
   "dependencies": {
     "axios": "^1.6.2",
     "discord.js": "^14.14.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "os": "^0.1.2",
     "passport": "^0.7.0",
     "passport-discord": "^0.1.4"
   }
